# embedded-cmake-example

./: .gitignore  CMakeLists.txt  README.md
Src/: datalog_application.c  datalog_application.h  main.c
bsp/: CMakeLists.txt
bsp/Components/: CMakeLists.txt
bsp/Components/lsm303agr/: Release_Notes.html  lsm303agr.c  lsm303agr_reg.c
bsp/Components/lsm6dsm/: Release_Notes.html  lsm6dsm.c  lsm6dsm_reg.h
bsp/SensorTile/: Release_Notes.html  SensorTile.c  SensorTile.h  SensorTile_audio.c  SensorTile_audio.h  SensorTile_bus.c  SensorTile_bus.h  SensorTile_conf_template.h  SensorTile_env_sensors.c  SensorTile_env_sensors.h  SensorTile_env_sensors_ex.c  SensorTile_env_sensors_ex.h  SensorTile_errno_template.h  SensorTile_gg.c  SensorTile_gg.h  SensorTile_motion_sensors.c  SensorTile_motion_sensors.h  SensorTile_motion_sensors_ex.c  SensorTile_motion_sensors_ex.h  SensorTile_sd.c  SensorTile_sd.h  hci_tl_interface_template.c  hci_tl_interface_template.h
bsp/cmake/: CPM.cmake
bsp/config/: FreeRTOSConfig.h  SensorTile_conf.h  SensorTile_errno.h  cube_hal.h  cube_hal_l4.c  ffconf.h  hts221_settings.h  lps22hb_settings.h  lsm303agr_settings.h  lsm6dsm_settings.h  main.h  sd_diskio.c  sd_diskio.h  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c  stm32l4xx_it.c  stm32l4xx_it.h  syscalls.c  usbd_cdc_interface.c  usbd_cdc_interface.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
